--- a/Gangyebab/Gangyebab/Home/View/HomeViewController.xib
+++ b/Gangyebab/Gangyebab/Home/View/HomeViewController.xib
@@ -1,22 +1,185 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="omyu_pretty.ttf">
+            <string>omyu_pretty</string>
+        </array>
+    </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController" customModule="Gangyebab" customModuleProvider="target">
             <connections>
+                <outlet property="calendar" destination="sYX-eS-rKF" id="tF1-9Y-Ma0"/>
+                <outlet property="homeSegmentedControl" destination="oFr-Q2-4sJ" id="4Cj-mc-87d"/>
+                <outlet property="nextButton" destination="ZVz-wb-exh" id="0cF-di-w7V"/>
+                <outlet property="previousButton" destination="7IZ-EG-1Je" id="1rt-yq-fMT"/>
+                <outlet property="todoCollectionView" destination="6FD-4l-bYF" id="ZCh-nt-kZu"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oFr-Q2-4sJ" customClass="HomeSegmentedControl" customModule="Gangyebab" customModuleProvider="target">
+                    <rect key="frame" x="123.66666666666669" y="68" width="146" height="36"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="36" id="iq9-AC-Fwr"/>
+                        <constraint firstAttribute="width" constant="146" id="qux-W2-bOc"/>
+                    </constraints>
+                </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="24.03.05 (화)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lJl-Pt-QsZ">
+                    <rect key="frame" x="148.66666666666666" y="119" width="96" height="20"/>
+                    <fontDescription key="fontDescription" name="omyu_pretty" family="omyu pretty" pointSize="20"/>
+                    <color key="textColor" name="stringColor1"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZVz-wb-exh" userLabel="nextButton">
+                    <rect key="frame" x="254.66666666666663" y="119" width="20" height="20"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="20" id="D81-Vs-T73"/>
+                        <constraint firstAttribute="width" constant="20" id="nxD-Av-b0J"/>
+                    </constraints>
+                    <color key="tintColor" name="stringColor1"/>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="plain" image="chevron.right" catalog="system" title=""/>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7IZ-EG-1Je" userLabel="previousButton">
+                    <rect key="frame" x="118.66666666666669" y="119" width="20" height="20"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="20" id="SIQ-dh-FGw"/>
+                        <constraint firstAttribute="height" constant="20" id="pse-vH-paI"/>
+                    </constraints>
+                    <color key="tintColor" name="stringColor1"/>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="plain" image="chevron.left" catalog="system"/>
+                </button>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="5T3-QJ-ZX4">
+                    <rect key="frame" x="0.0" y="169" width="393" height="629"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sYX-eS-rKF" customClass="FSCalendar">
+                            <rect key="frame" x="0.0" y="0.0" width="393" height="250"/>
+                            <color key="backgroundColor" name="background2"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="250" id="ety-nn-Egn"/>
+                            </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="color" keyPath="selectionColor">
+                                    <color key="value" name="point1"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="color" keyPath="weekdayTextColor">
+                                    <color key="value" name="stringColor1"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="color" keyPath="titleDefaultColor">
+                                    <color key="value" name="stringColor1"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="allowsMultipleSelection" value="NO"/>
+                                <userDefinedRuntimeAttribute type="number" keyPath="headerTitleTextSize">
+                                    <real key="value" value="0.0"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1EA-bA-yIO" userLabel="Todo View">
+                            <rect key="frame" x="0.0" y="250" width="393" height="379"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="해야 할 일을 추가해 보세요." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oSE-U1-6dh">
+                                    <rect key="frame" x="102.66666666666669" y="179.66666666666663" width="188" height="20"/>
+                                    <fontDescription key="fontDescription" name="omyu_pretty" family="omyu pretty" pointSize="20"/>
+                                    <color key="textColor" name="stringColor1"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="6FD-4l-bYF" userLabel="Todo Collection View">
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="379"/>
+                                    <color key="backgroundColor" name="background1"/>
+                                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Hph-GI-ywU">
+                                        <size key="itemSize" width="128" height="128"/>
+                                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    </collectionViewFlowLayout>
+                                </collectionView>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="oSE-U1-6dh" firstAttribute="centerY" secondItem="1EA-bA-yIO" secondAttribute="centerY" id="JAB-g7-4QE"/>
+                                <constraint firstItem="6FD-4l-bYF" firstAttribute="top" secondItem="1EA-bA-yIO" secondAttribute="top" id="TyG-Ai-5eT"/>
+                                <constraint firstAttribute="trailing" secondItem="6FD-4l-bYF" secondAttribute="trailing" id="Ums-nd-Hd0"/>
+                                <constraint firstAttribute="bottom" secondItem="6FD-4l-bYF" secondAttribute="bottom" id="u6T-JZ-J5P"/>
+                                <constraint firstItem="6FD-4l-bYF" firstAttribute="leading" secondItem="1EA-bA-yIO" secondAttribute="leading" id="x8W-dR-ul9"/>
+                                <constraint firstItem="oSE-U1-6dh" firstAttribute="centerX" secondItem="1EA-bA-yIO" secondAttribute="centerX" id="yNN-10-ZcH"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                </stackView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d4H-zp-SIe">
+                    <rect key="frame" x="348" y="705" width="20" height="20"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="20" id="bnR-g5-SsQ"/>
+                        <constraint firstAttribute="height" constant="20" id="isv-1Z-EO9"/>
+                    </constraints>
+                    <color key="tintColor" name="stringColor1"/>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="plain" image="plus.circle.fill" catalog="system" title=""/>
+                </button>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="temp_icon" translatesAutoresizingMaskIntoConstraints="NO" id="G8q-X5-rX4">
+                    <rect key="frame" x="283" y="708" width="80" height="80"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="80" id="0il-xy-0Gw"/>
+                        <constraint firstAttribute="width" constant="80" id="Xvw-TB-5qD"/>
+                    </constraints>
+                </imageView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" name="background1"/>
+            <constraints>
+                <constraint firstItem="5T3-QJ-ZX4" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="FPL-PR-uMV"/>
+                <constraint firstItem="d4H-zp-SIe" firstAttribute="top" secondItem="G8q-X5-rX4" secondAttribute="top" constant="-3" id="Idt-7k-6KS"/>
+                <constraint firstItem="oFr-Q2-4sJ" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="9" id="JIV-1X-BGM"/>
+                <constraint firstItem="ZVz-wb-exh" firstAttribute="leading" secondItem="lJl-Pt-QsZ" secondAttribute="trailing" constant="10" id="LYh-yX-wKI"/>
+                <constraint firstItem="lJl-Pt-QsZ" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="OIM-d3-EfQ"/>
+                <constraint firstItem="lJl-Pt-QsZ" firstAttribute="leading" secondItem="7IZ-EG-1Je" secondAttribute="trailing" constant="10" id="P4b-Ne-G5Y"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="5T3-QJ-ZX4" secondAttribute="trailing" id="Q1R-TT-NzF"/>
+                <constraint firstItem="5T3-QJ-ZX4" firstAttribute="top" secondItem="lJl-Pt-QsZ" secondAttribute="bottom" constant="30" id="Q2b-9m-aHd"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="5T3-QJ-ZX4" secondAttribute="bottom" constant="20" id="Wxy-zY-BUL"/>
+                <constraint firstItem="lJl-Pt-QsZ" firstAttribute="top" secondItem="oFr-Q2-4sJ" secondAttribute="bottom" constant="15" id="aPw-X0-xOD"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="d4H-zp-SIe" secondAttribute="trailing" constant="25" id="e6b-fO-uoU"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="G8q-X5-rX4" secondAttribute="bottom" constant="30" id="gSi-3V-cQc"/>
+                <constraint firstItem="7IZ-EG-1Je" firstAttribute="centerY" secondItem="lJl-Pt-QsZ" secondAttribute="centerY" id="kOv-ie-tcb"/>
+                <constraint firstItem="oFr-Q2-4sJ" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="or9-kT-YSi"/>
+                <constraint firstItem="ZVz-wb-exh" firstAttribute="centerY" secondItem="lJl-Pt-QsZ" secondAttribute="centerY" id="ph1-P3-QPi"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="G8q-X5-rX4" secondAttribute="trailing" constant="30" id="wL7-kg-jSS"/>
+            </constraints>
+            <point key="canvasLocation" x="129.00763358778624" y="20.422535211267608"/>
         </view>
     </objects>
+    <resources>
+        <image name="chevron.left" catalog="system" width="97" height="128"/>
+        <image name="chevron.right" catalog="system" width="97" height="128"/>
+        <image name="plus.circle.fill" catalog="system" width="128" height="123"/>
+        <image name="temp_icon" width="125" height="125"/>
+        <namedColor name="background1">
+            <color red="0.99607843137254903" green="0.97254901960784312" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="background2">
+            <color red="0.93725490196078431" green="0.8901960784313725" blue="0.85098039215686272" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="point1">
+            <color red="0.43137254901960786" green="0.27058823529411763" blue="0.094117647058823528" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="stringColor1">
+            <color red="0.34509803921568627" green="0.18823529411764706" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
