--- a/Gangyebab/Gangyebab/Home/View/Cell/TodoCollectionViewCell.xib
+++ b/Gangyebab/Gangyebab/Home/View/Cell/TodoCollectionViewCell.xib
@@ -13,13 +13,7 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TodoCollectionViewCell" customModule="Gangyebab" customModuleProvider="target">
-            <connections>
-                <outlet property="contentLabel" destination="0Qc-RF-VKx" id="h8b-b7-LfF"/>
-                <outlet property="importanceColor" destination="SX7-AS-bGQ" id="KQP-Ke-Xa1"/>
-                <outlet property="underLine" destination="4Qn-MH-44e" id="vyu-IH-S1e"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="gTV-IL-0wX" customClass="TodoCollectionViewCell" customModule="Gangyebab" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="346" height="30"/>
@@ -36,23 +30,23 @@
                         </constraints>
                     </view>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="B1y-hc-FUV">
-                        <rect key="frame" x="10" y="0.0" width="326" height="28"/>
+                        <rect key="frame" x="10" y="0.0" width="326" height="23"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SX7-AS-bGQ" userLabel="Importance Color">
-                                <rect key="frame" x="0.0" y="0.0" width="5" height="28"/>
+                                <rect key="frame" x="0.0" y="0.0" width="5" height="23"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="5" id="PsM-He-gX0"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Qc-RF-VKx" userLabel="Content Label">
-                                <rect key="frame" x="10" y="0.0" width="41.666666666666664" height="28"/>
+                                <rect key="frame" x="10" y="0.0" width="41.666666666666664" height="23"/>
                                 <fontDescription key="fontDescription" name="SOYO-Maple-Regular" family="SOYO Maple" pointSize="15"/>
                                 <color key="textColor" name="stringColor1"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HNo-HF-cez">
-                                <rect key="frame" x="56.666666666666657" y="0.0" width="269.33333333333337" height="28"/>
+                                <rect key="frame" x="56.666666666666657" y="0.0" width="269.33333333333337" height="23"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                         </subviews>
@@ -63,12 +57,17 @@
                 <constraint firstItem="B1y-hc-FUV" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="1hc-kQ-qfd"/>
                 <constraint firstAttribute="trailing" secondItem="4Qn-MH-44e" secondAttribute="trailing" id="3OU-dx-QZR"/>
                 <constraint firstItem="B1y-hc-FUV" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="Kin-kz-NiX"/>
-                <constraint firstAttribute="bottom" secondItem="B1y-hc-FUV" secondAttribute="bottom" constant="2" id="jCZ-Mz-GoC"/>
+                <constraint firstAttribute="bottom" secondItem="B1y-hc-FUV" secondAttribute="bottom" constant="7" id="jCZ-Mz-GoC"/>
                 <constraint firstItem="4Qn-MH-44e" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="kE0-AS-LIk"/>
                 <constraint firstAttribute="trailing" secondItem="B1y-hc-FUV" secondAttribute="trailing" constant="10" id="vhT-WR-zfy"/>
                 <constraint firstAttribute="bottom" secondItem="4Qn-MH-44e" secondAttribute="bottom" id="y8u-ZO-Jhg"/>
             </constraints>
             <size key="customSize" width="318" height="124"/>
+            <connections>
+                <outlet property="contentLabel" destination="0Qc-RF-VKx" id="tqJ-18-tc4"/>
+                <outlet property="importanceColor" destination="SX7-AS-bGQ" id="Yvg-q9-DJG"/>
+                <outlet property="underLine" destination="4Qn-MH-44e" id="9GW-gM-McW"/>
+            </connections>
             <point key="canvasLocation" x="160.30534351145039" y="33.802816901408455"/>
         </collectionViewCell>
     </objects>
