--- a/Gangyebab/Gangyebab/Alert/View/CustomAlertViewController.xib
+++ b/Gangyebab/Gangyebab/Alert/View/CustomAlertViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -19,7 +19,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomAlertViewController" customModule="Gangyebab" customModuleProvider="target">
             <connections>
                 <outlet property="cancelButton" destination="EgZ-Qh-2vg" id="b9I-jk-C8q"/>
-                <outlet property="deleteButton" destination="tHY-uL-9pe" id="vWj-KB-okk"/>
+                <outlet property="confirmButton" destination="tHY-uL-9pe" id="vWj-KB-okk"/>
                 <outlet property="messageLabel" destination="Cbo-8X-6Pv" id="xSK-jn-dDT"/>
                 <outlet property="titleLabel" destination="lAR-8e-Z9v" id="pix-q3-aMd"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
